# gordian-rs

./: Cargo.toml  README.md
.ccls-cache/@home@isithas@Projects@gordian-rs/: c-trans@testdata@example.c  c-trans@testdata@example.c.blob
c-trans/: Cargo.toml
c-trans/src/: cli.rs  encoder.rs  main.rs  vir.rs  vir_to_viper.rs
graphlang-parser/: Cargo.toml
graphlang-parser/src/: ast.rs  parser.rs
